--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
+    <script src="https://kit.fontawesome.com/0a08fde11c.js" crossorigin="anonymous"></script>
     <title>Sweet couple</title>
   </head>
   <body>
